cont-stack-docs: docs/cont-stack.md — what nests and what does not, the per-platform room, --enable-native-access, the knobs, the written bounds, the measured costs, the literature; two examples pinned in TestDocExamplesContStack (1M tail shifts on 128 KB, zero switches); README entry